--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,14 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  bloc: ^8.1.0
   equatable: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
   formz: ^0.6.0
-  get: ^4.6.1
+
+
 
 flutter:
   uses-material-design: true
